# extract-wechat-messages-linux

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
packaging/aur/: .SRCINFO  PKGBUILD  README.md
rust/: README.md
rust/wxe-core/: Cargo.toml  pyproject.toml
rust/wxe-core/src/: lib.rs
src/wxextract/: __main__.py  chunker.py  cli.py  contacts.py  decrypt.py  discover.py  images.py  instagram.py  keys.py  lifecycle.py  messages.py  picker.py  progress.py  report.py  snapshot.py  state.py  stats.py  tokens.py  update_check.py  util.py  whatsapp.py
src/wxextract/assets/: ig_dump.js
src/wxextract/render/: common.py  compact_txt.py  jsonl.py  markdown.py  pseudo_xml.py
tests/: conftest.py  test_chunker.py  test_cli.py  test_contacts.py  test_decrypt.py  test_discover.py  test_images.py  test_instagram.py  test_keys.py  test_lifecycle.py  test_messages.py  test_polish.py  test_render_jsonl.py  test_render_md.py  test_render_txt.py  test_render_xml.py  test_smoke.py  test_state.py  test_stats.py  test_update_check.py  test_util.py  test_whatsapp.py
