[project]
name = "wxextract"
version = "0.7.1"
description = "Extract WeChat 4.x conversations on Linux into compact LLM-ready text"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pycryptodome>=3.20",
    "zstandard>=0.22",
    "tiktoken>=0.8",
    "rich>=13.7",
    "rich-argparse>=1.5",
]

[project.scripts]
wxextract = "wxextract.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wxextract"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "lxml>=5.2",   # tests only — XML well-formedness assertions
]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pyflakes + pycodestyle
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
]
ignore = [
    "E501",          # line too long — let formatter handle
    "B008",          # function calls in defaults (rich.Text() used in tables)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F811"]   # test fixtures import patterns
